@@ -1,3 +1,9 @@
+2006-03-22  Jörg Höhle  <hoehle@users.sourceforge.net>
+
+	* strings.tst: Fix bug 1445842,
+	ADJUST-ARRAY on 0-length adjustable string
+	Reported by David Tolpin <dtolpin@users.sourceforge.net>
+
 2006-03-06  Bruno Haible  <bruno@clisp.org>
 
 	* backquot.tst: Add test for bug 1308444.
